--- a/frontEnd/signupPAge.html
+++ b/frontEnd/signupPAge.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form>
+    <form onsubmit="takeUserDeatils(event)" method="post">
         <div class="container">
             <h1>Register Here</h1>
             <p>Please fill in the details to create an account with us.</p>
@@ -33,6 +33,8 @@
             <p>Already have an account? <a href="login.html">Sign in</a>.</p>
         </div>
     </form>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.2/axios.min.js"></script>
+    <script src="signUp.js"></script>
 </body>
 
 </html>
