--- a/frontEnd/signupPAge.html
+++ b/frontEnd/signupPAge.html
@@ -16,15 +16,15 @@
             <p>Please fill in the details to create an account with us.</p>
             <hr>
             <label for="name"><b>Enter Name:</b></label>
-            <input type="text" placeholder="Enter Name" name="name">
+            <input type="text" placeholder="Enter Name" id="name" >
             <label for="email"><b>Enter Email : </b></label>
-            <input type="text" placeholder="Enter Email" name="email">
+            <input type="text" placeholder="Enter Email" id="email">
             <br><br>
 
             <label for="phoneNumber"><b>Phone Number:</b></label>
-            <input type="number" placeholder="Enter Number" name="number">
+            <input type="number" placeholder="Enter Number" id="number">
             <label for="pwd"><b>Password:</b></label>
-            <input type="password" placeholder="Enter Password" name="pwd">
+            <input type="password" placeholder="Enter Password" id="pwd">
             <br><br>
             <hr>
             <button type="submit" class="registerbtn"><strong>Register</strong></button>
