--- a/frontEnd/loginPage.html
+++ b/frontEnd/loginPage.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Inside Login success </h1>
+    <h1>Group Chat </h1>
+    <div id="group">
+    </div>
 </body>
+<script src="afterLogin.js"></script>
 </html>
