--- a/frontEnd/loginPage.html
+++ b/frontEnd/loginPage.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>Group Chat </h1>
-    <div id="group">
+    <div id="chatMessage">
+    </div>
+    <div id="chatFooter">
+        <input type="text" placeholder="Enter Message" id="chatMessageInput">
+        <button id="send">Submit</button>
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.2/axios.min.js"></script>
 <script src="afterLogin.js"></script>
 </html>
